crates/apollo-compiler/test_data/diagnostics/0069_subselection_of_object.txt
Error: interface, union and object types must have a subselection set
    ╭─[0069_subselection_of_object.graphql:2:3]
    │
  2 │       pet1
    │       ──┬─  
    │         ╰─── field `pet1` type `Pet` is an object and must select fields
    │ 
 19 │ ╭─▶ type Pet {
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0069_subselection_of_object.graphql:3:3]
    │
  3 │       pet2
    │       ──┬─  
    │         ╰─── field `pet2` type `Pet` is an object and must select fields
    │ 
 19 │ ╭─▶ type Pet {
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0069_subselection_of_object.graphql:4:3]
    │
  4 │       pet3
    │       ──┬─  
    │         ╰─── field `pet3` type `Pet` is an object and must select fields
    │ 
 19 │ ╭─▶ type Pet {
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0069_subselection_of_object.graphql:5:3]
    │
  5 │       pet4
    │       ──┬─  
    │         ╰─── field `pet4` type `Pet` is an object and must select fields
    │ 
 19 │ ╭─▶ type Pet {
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0069_subselection_of_object.graphql:6:3]
    │
  6 │       pet5
    │       ──┬─  
    │         ╰─── field `pet5` type `Pet` is an object and must select fields
    │ 
 19 │ ╭─▶ type Pet {
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: interface, union and object types must have a subselection set
    ╭─[0069_subselection_of_object.graphql:7:3]
    │
  7 │       pet6
    │       ──┬─  
    │         ╰─── field `pet6` type `Pet` is an object and must select fields
    │ 
 19 │ ╭─▶ type Pet {
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯

